--- a/css/activities.css
+++ b/css/activities.css
@@ -1,3 +1,30 @@
+@import url(https://fonts.googleapis.com/css?family=Raleway:500);
 #music {
     margin-top: 8%;
+}
+
+p {
+    font-family: 'Raleway', sans-serif;
+    /*    margin-right: 3%;*/
+    color: rgba(243, 167, 96, 0.64);
+    margin-top: 15%;
+    font-size: 2em;
+}
+
+
+/*******MEDIA QUERIES*********/
+
+@media only screen and (max-width: 320px) {
+    #music {
+        margin-top: 15%;
+    }
+    p {
+        color: rgba(243, 167, 96, 0.64);
+        margin-top: 5%;
+        text-align: center;
+        font-size: 1.05em;
+    }
+    #Socialite {
+        margin-top: 5%;
+    }
 }
