--- a/css/app.css
+++ b/css/app.css
@@ -1,15 +1,19 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:500);
 body {
     background: #000;
-    height: 80%}
+    height: 80%
+}
 
 p {
     font-family: 'Raleway', sans-serif;
-    text-align: center;
     margin-right: 3%;
-    color: #fff;
-    margin-top: 50%;
+    color: rgba(243, 167, 96, 0.64);
+    margin-top: 30%;
     font-size: 2em;
+}
+
+img {
+    height: 700px;
 }
 
 
@@ -19,14 +23,14 @@ p {
     img {
         max-width: 100%;
         width: 90%;
-        height: 390px;
+        height: 420px;
     }
     .small-6 {
         width: 100%;
     }
     p {
-        color: #fff;
-        margin-top: 15%;
+        color: rgba(243, 167, 96, 0.64);
+        margin-top: 10%;
         text-align: center;
         font-size: 1.05em;
     }
