--- a/css/nav.css
+++ b/css/nav.css
@@ -16,8 +16,9 @@
 }
 
 a {
-    color: #fff;
+    color: rgba(243, 167, 96, 0.64);
     text-decoration: none;
+    text-align: center;
 }
 
 ul {
@@ -66,6 +67,7 @@ ul {
 }
 
 .nav .right li a {
+    font-size: 1.5em;
     display: block;
     padding: 9px 15px;
     line-height: 30px;
@@ -110,6 +112,7 @@ ul {
         display: none;
     }
     .style-mobile {
+        opacity: .956;
         background: #ffffff;
         top: 51px;
         position: absolute;
